style: fix admonition overflow

--- a/packages/logos-docusaurus-theme/src/client/css/custom.scss
+++ b/packages/logos-docusaurus-theme/src/client/css/custom.scss
@@ -1206,4 +1206,8 @@ code {
   background: rgba(var(--lsd-theme-primary), 0.1);
 }
 
+.theme-admonition {
+  overflow: auto;
+}
+
 @import './blog.scss';
